# fooling-projection-metrics

./: .gitignore  README.md  pyproject.toml
experiments/: 1_learn_by_metric.py  2_learn_by_many_metrics.py  3_approx_qm_vis.py
experiments/conf/: exp1.yaml  exp2.yaml
neural_qmetrics/: __init__.py
neural_qmetrics/common/: __init__.py  data.py  defs.py  util.py
neural_qmetrics/models/: __init__.py  metric_nnp.py
notebooks/: analysis_exp1.ipynb  guardrail.ipynb  summary_stats.ipynb
